--- a/index.html
+++ b/index.html
@@ -1,4 +1,13 @@
 <!doctype html><head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-GKGKS8MQJ2"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-GKGKS8MQJ2');
+</script>
   <meta charset="UTF-8">
   <meta name="keywords" content="visualization,embeddings,machine learning,javascript">
 
