タイトルを日本語訳

--- a/index.html
+++ b/index.html
@@ -13374,7 +13374,7 @@ Polymer({is:"vz-projector-app",properties:{pageViewLogging:{type:Boolean,value:!
   
   
 
-  <title>Embedding projector - visualization of high-dimensional data</title>
+  <title>埋め込みプロジェクター - 高次元データの可視化</title>
   <style include="vz-projector-styles"></style>
   <style>
     html {
